# weavster

./: .coderabbit.yaml  .cspell.json  .dockerignore  .editorconfig  .gitignore  .octocov.yml  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODEX.md  CODE_REVIEW.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.orig  Dockerfile  LICENSE  Makefile  README.md  VSCODE_SETUP.md  biome.json  check_eq.rs  cliff.toml  codecov.yml  coderabbit_output.txt  index.html  mkdocs.yml  modules.html  objects.inv  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  sitemap.xml  test.patch  wf-changelog.md
.agents/skills/spek-implement/: SKILL.md
.agents/skills/spek-new/: SKILL.md
.agents/skills/spek-plan/: SKILL.md
.claude/: settings.json
.claude/commands/: brainstorm-feature.md  commit-push-pr.md  commit-push.md  create-from-plan.md  create-issue.md  work.md
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: README.md  changelog.yml  ci.yml  claude-code-review.yml  claude-dispatch.yml  claude-review.yml  claude-work.yml  claude.yml  coverage.yml  develop-publish.yml  docs-build.yml  docs-deploy.yml  docs.yml  gemini-review.yml  gemini-work.yml  main.yml  manual-docs-deploy.yml  nightly-release.yml  on-release-main.yml  production-release.yml  release-candidate.yml  release.yml  require-issue.yml  validate-codecov-config.yml  workflow-quality.yml
.spektacular/: .gitignore  config.yaml  state.json
.spektacular/knowledge/: conventions.md
.spektacular/knowledge/architecture/: README.md
.spektacular/knowledge/gotchas/: README.md
.spektacular/knowledge/learnings/: README.md
.spektacular/plans/20260428024252-docs-current-vs-planned-alignment/: plan.md  research.md
.spektacular/specs/: 20260428024252-docs-current-vs-planned-alignment.md  20260502160602-sqlite-local-runtime-docs-cleanup.md  20260502165842-workflow-quality-spektacular-alignment.md  20260503134624-pin-codex-action-nano-model.md  20260504125300-runtime-docs-alignment-followup.md  20260505135911-ci-cd-final-conversion.md
.spektacular/tmp/: context_template.md  plan_template.md
Redesign/: Core_Flows__Weavster_Developer_Experience.md  Epic_Brief__Weavster_MVP_-_WASM-Based_Data_Transformation_Engine.md  Technical_Plan__Weavster_MVP_Architecture.md
Redesign/tickets/: CLI_Foundation__init,_validate,_and_help_Commands.md  CLI_Polish,_Documentation_&_End-to-End_Testing.md  File_Processing__Watching,_Glob_Patterns_&_Run_Command.md  Testing_Framework_&_Test_Command.md  Transform_Engine_&_State_Management.md  Validation_Layer_with_LSP-Ready_Architecture.md  WASM_Compilation_Pipeline__Codegen_&_Runtime.md
cli/: README.md  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
cli/src/: bundle.ts  compile.ts  connectors.ts  fixtures.ts  flow.ts  functions.ts  index.ts  init.ts  javy.ts  pipeline.ts  project.ts  runner.ts  schema.ts
cli/src/commands/: compile.ts  init.ts  (+3 more)
cli/test/: bundle-guard.test.ts  bundle.test.ts  compile-wasm.test.ts  compile.test.ts  flow.test.ts  init.test.ts  javy.test.ts  manifest.test.ts  parity.test.ts  run.test.ts  test.test.ts  validate.test.ts  wasmHost.ts
core/: package.json  tsconfig.json
core/src/: index.ts  model.ts  path.ts  transform.ts
core/test/: dsl-engine.test.ts  dsl-expr.test.ts  json.test.ts  model.test.ts  path.test.ts  transform.test.ts  xml.test.ts
crates/weavster-cli/: Cargo.toml
crates/weavster-cli/src/: local_db.rs  main.rs
crates/weavster-cli/src/commands/: compile.rs  connector.rs  flow.rs  init.rs  mod.rs  package.rs  run.rs  status.rs  test.rs  validate.rs
crates/weavster-cli/tests/: cli_test.rs
crates/weavster-codegen/: Cargo.toml
crates/weavster-codegen/src/: compiler.rs  error.rs  generator.rs  ir.rs  lib.rs  parser.rs
crates/weavster-codegen/src/transforms/: lookup.rs  map.rs  mod.rs  regex.rs  template.rs
crates/weavster-core/: Cargo.toml
crates/weavster-core/src/: config.rs  connectors.rs  error.rs  flow.rs  interpreter.rs  lib.rs  transforms.rs  wasm.rs
crates/weavster-core/src/testing/: assertions.rs  executor.rs  mod.rs  models.rs
crates/weavster-core/tests/: config_integration_test.rs
crates/weavster-runtime/: Cargo.toml
crates/weavster-runtime/migrations_postgres/: 20260310000000_init.sql
crates/weavster-runtime/migrations_sqlite/: 20260310000000_init.sql
crates/weavster-runtime/migrations_sqlite/20260310000000_init/: down.sql  up.sql
crates/weavster-runtime/src/: engine.rs  error.rs  jobs.rs  lib.rs  models.rs  schema.rs  state.rs  wasm.rs
docker/: Dockerfile.dev  Dockerfile.runtime
docs/: ARTIFACT_SPEC.md  ENGINE_PLAN.md  MVP_PLAN.md  MVP_TASKS.md  README.md  RELEASE.md  cli.md  docusaurus.config.ts  index.md  modules.md  sidebars.ts
docs/archive/: README.md
docs/docs/: index.md
docs/rfcs/: 0001-v0alpha2-dsl.md  0002-run-pipelines.md  0003-engine-runtime.md
docs/static/: CNAME
engine/: Cargo.toml  Dockerfile
engine/examples/: s4_lifecycle.rs
engine/src/: config.rs  connector.rs  host.rs  log.rs  main.rs  manifest.rs  registry.rs  runner.rs
engine/src/connectors/: file.rs  mod.rs
engine/tests/: artifact.rs  cli.rs
examples/golden-path/: weavster.yaml
notes/: DEV_LOG.md
patches/: xml-naming@0.1.0.patch
plans/: architecture-and-design.md  linear-ticket-template.md  mvp-file-transform-pipeline.md
plans/mvp-transform-pipeline/: 1__Foundation__Config_Layer_with_Jinja_&_Macro_Support.md
search/: search_index.json
spec/schemas/: flow.schema.json  manifest.schema.json  pipeline.schema.json  project.schema.json
src/weavster/: __init__.py
test_exceptions/: weavster.yml
test_exceptions/connectors/: invalid_connector.yml  valid_connector.yml
tests/: test_foo.py
website/: docusaurus.config.ts  sidebars.ts
website/docs/: architecture.md  cli.md  concepts.md  config.md  contributing.md  dsl.md  formats.md  getting-started.md  pipelines.md  testing.md  typescript.md
(+95 files in other folders)
