[package]
name = "weavster-engine"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
description = "Thin Rust runtime that executes compiled Weavster artifacts (RFC 0003)."
license = "BUSL-1.1"
publish = false

[[bin]]
name = "weavster-engine"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
glob = "0.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
wasmtime = "34.0.2"
wasmtime-wasi = "34.0.2"

[dev-dependencies]
serde_json = "1.0.150"
