[package]
name = "weavster-cli"
description = "Developer CLI for Weavster - local development and project management"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "weavster"
path = "src/main.rs"

[dependencies]
weavster-core.workspace = true
weavster-codegen.workspace = true
weavster-runtime.workspace = true

# CLI
clap.workspace = true

# Async
tokio.workspace = true

# Error handling
anyhow.workspace = true

# Serialization
serde_json.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Config
walkdir = "2.5"      # For directory traversal

[dev-dependencies]
rstest.workspace = true
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.19"
serde_json.workspace = true
