[package]
name = "weavster-codegen"
description = "YAML → Rust → WASM code generation for Weavster transforms"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
weavster-core.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# Code generation
quote = "1.0"
proc-macro2 = "1.0"

# Templating for codegen
minijinja.workspace = true

# Regex validation
regex = "1.11"

# File handling
walkdir = "2.5"
tempfile = "3.14"

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Process execution (for cargo/rustc)
tokio = { workspace = true, features = ["process"] }

# Hashing for cache invalidation
sha2 = "0.10"
hex = "0.4"

# CSV parsing for lookup tables
csv = "1.3"

[dev-dependencies]
rstest.workspace = true
tokio = { workspace = true, features = ["test-util"] }
