[package]
name = "weavster-runtime"
description = "Execution runtime for Weavster - designed for minimal Docker images"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
weavster-core.workspace = true
sqlx.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async
tokio.workspace = true

# Error handling
anyhow.workspace = true

chrono.workspace = true
async-trait.workspace = true

# Logging
tracing.workspace = true
wasmtime.workspace = true

sha2 = { workspace = true }
hex = { workspace = true }
minijinja = { workspace = true }

[dev-dependencies]
rstest.workspace = true
tokio = { workspace = true, features = ["test-util"] }
tempfile.workspace = true
